<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".QuizActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/croissant_one"
            android:text="@string/it_works"
            android:textAllCaps="true"
            android:textSize="28sp"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="9dp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/questions_attempted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/questions_attempted"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_below="@id/questions_attempted"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_below="@id/question">

        <Button
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:elevation="3dp"
            android:text="@string/option_1"
            android:textSize="18sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:elevation="3dp"
            android:text="@string/option_2"
            android:textAllCaps="false"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:elevation="3dp"
            android:text="@string/option_3"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:elevation="3dp"
            android:text="@string/option_4"
            android:textAllCaps="false"
            android:textSize="18sp"/>

    </LinearLayout>

</RelativeLayout>