<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/score_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/croissant_one"
        android:text="@string/your_result_is"
        android:textColor="@color/purple_200"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:padding="3dp"/>

    <Button
        android:id="@+id/restart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/restart_quiz"
        android:textSize="20sp"
        android:backgroundTint="@color/teal_700"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/exit"
        android:textSize="20sp"
        android:backgroundTint="@color/teal_700"/>
</LinearLayout>